Clean up the API
To implement a MVP of the service, remove some API operations that are
not relevant to test the application.
